feat(ui): P6-T1B jobs workspace polish
- Add priority badges (Low/Medium/High/Urgent) to job cards
- Add search filter by title/client name
- Add status filter dropdown
- Improve empty states with icons and CTAs
- Add filter bar with responsive design

Refs: P6-T1B

--- a/docs/PHASED_BACKLOG.yaml
+++ b/docs/PHASED_BACKLOG.yaml
@@ -159,7 +159,7 @@ epics:
     tasks:
       - id: P6-T1A
         title: Global shell + navigation coherence
-        status: in_progress
+        status: completed
         completed_by: agent-orchestrator
         acceptance:
           - Active nav state indicator on all pages
@@ -168,7 +168,8 @@ epics:
           - Dashboard or redirect option from root
       - id: P6-T1B
         title: Jobs workspace polish
-        status: pending
+        status: completed
+        completed_by: agent-orchestrator
         acceptance:
           - Priority badge on job cards
           - Search/filter capability
