feat(ui): P6-T1C visits workspace polish
- Add tech 'My Day' timeline view with time-of-day greeting
- Add overdue visit highlighting with red styling
- Add relative time indicators (e.g., '2h ago overdue')
- Add alert styling to admin overdue metrics card
- Improve empty states

Refs: P6-T1C

--- a/docs/PHASED_BACKLOG.yaml
+++ b/docs/PHASED_BACKLOG.yaml
@@ -176,7 +176,8 @@ epics:
           - Improved empty states with CTAs
       - id: P6-T1C
         title: Visits workspace polish
-        status: pending
+        status: completed
+        completed_by: agent-orchestrator
         acceptance:
           - My Day view for tech role
           - Overdue visit highlighting
