feat(ui): P6-T1D estimates/invoices workspace polish
- Add financial totals summary (outstanding, overdue, collected)
- Add estimates conversion funnel visualization
- Add invoice aging indicators (days overdue/due soon)
- Improve empty states with icons and CTAs
- Color-code metric cards (green for success, red for alerts)

Refs: P6-T1D

--- a/docs/PHASED_BACKLOG.yaml
+++ b/docs/PHASED_BACKLOG.yaml
@@ -184,7 +184,8 @@ epics:
           - Quick assignment modal for admin
       - id: P6-T1D
         title: Estimates/Invoices workspace polish
-        status: pending
+        status: completed
+        completed_by: agent-orchestrator
         acceptance:
           - Outstanding totals summary
           - Conversion funnel visibility
