--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "lint": "pnpm -r lint",
     "typecheck": "pnpm -r typecheck",
     "test": "pnpm -r test",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
     "gate": "pnpm lint && pnpm typecheck && pnpm build && pnpm test",
     "db:migrate": "bash scripts/db-migrate.sh",
     "db:seed": "bash scripts/db-seed.sh"
@@ -20,6 +22,7 @@
     "node": ">=20.0.0"
   },
   "devDependencies": {
+    "@playwright/test": "^1.49.1",
     "typescript": "^5.7.2"
   }
 }
